--- a/src/css/style.css
+++ b/src/css/style.css
@@ -413,6 +413,7 @@ section#favourites-scholarships-section {
 #footer-center-col {
     border-left: 3px solid var(--primary-blue);
     border-right: 3px solid var(--primary-blue);
+    color: var(--primary-blue);
 }
 
 .modal {
